# py_email_verifier

./: examples.py  pyproject.toml  requirements.txt
_verify_email/: fast_verify.py
py_email_verifier/: __init__.py  blacklist.py  constants.py  exceptions.py  iterators.py  models.py  typings.py  validators.py
py_email_verifier/verifiers/: dns_verifier.py  email_verifier.py  smtp_verifier.py
tests/: test_models.py  test_verifiers.py
